# bench

./: .env  .gitignore  CLAUDE.md  docker-compose.yml  justfile  main.py  plot_studies.py  pyproject.toml  requirements.txt  run_interleaved.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
grafana/provisioning/dashboards/: dashboards.yml  postgresql-benchmark.json
pgbench_scripts/: olap.sql
postgresql/config/: performance.conf  performance.conf.bak  postgresql.conf
postgresql/exporter/: queries.yaml
prometheus/: prometheus.yml
src/: benchmark_runner.py  config.py  metrics_client.py  optimizer.py  pg_manager.py  search_space.py
tests/: test_metrics_client.py  test_pg_manager.py  test_search_space.py
thesis/: CLAUDE.md  REQUIREMENTS.md  main.typ  references.bib
thesis/chapters/: abbreviations.typ  ch1-analysis.typ  ch2-bayesian.typ  ch3-implementation.typ  ch4-experiments.typ  conclusion.typ  intro.typ
thesis/defense/: requirements.txt  slides.typ  speech.md
thesis/sources/: TL_Bakalavr_2026.docx  arch_updated.puml  bo_loop.puml  docker_infra.puml  gen_search_comparison.py  trial_sequence.puml  Доклад.md
